--- a/AsistenciaAutomatica/app/src/main/res/values/strings.xml
+++ b/AsistenciaAutomatica/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="Marcar_Zona">Pulse el boton \"Punto 1\" cuando se encuentre en la esquina inferior derecha del lugar del evento,
     luego pulse el boton \"Punto 2\" cuando se encuentre en la esquina superior izquierda para establecer la zona de validacion de asistencia. </string>
     <string name="Select_event">Seleccione evento ha asistir.</string>
+    <string name="matricula">Ingrese matricula/cedula. </string>
 
 </resources>
